--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ discord.py==2.3.2
 python-dotenv==1.0.0
 httpx==0.25.2
 pydantic==2.5.0
-slowapi==0.1.9pydantic-settings
+pydantic-settings
+slowapi==0.1.9
