--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   morpheus:
     build: .
@@ -7,21 +5,9 @@ services:
     restart: unless-stopped
     ports:
       - "8000:8000"
-    environment:
-      # Load environment variables from .env file
-      - DISCORD_BOT_TOKEN=${DISCORD_BOT_TOKEN}
-      - MORPHEUS_API_KEY=${MORPHEUS_API_KEY}
-      - VAULTWARDEN_URL=${VAULTWARDEN_URL}
-      - VAULTWARDEN_MASTER_PASSWORD=${VAULTWARDEN_MASTER_PASSWORD}
-      - DISCORD_APPROVAL_CHANNEL_ID=${DISCORD_APPROVAL_CHANNEL_ID}
-      - DISCORD_LOG_CHANNEL_ID=${DISCORD_LOG_CHANNEL_ID}
-      - DISCORD_APPROVER_ID=${DISCORD_APPROVER_ID}
-      - APPROVAL_TIMEOUT_SECONDS=${APPROVAL_TIMEOUT_SECONDS}
-      - HOST=${HOST:-0.0.0.0}
-      - PORT=${PORT:-8000}
-      - LOG_LEVEL=${LOG_LEVEL:-info}
+    env_file:
+      - .env
     volumes:
-      # Mount logs directory for persistent logging
       - ./logs:/app/logs
     networks:
       - morpheus-network
@@ -35,7 +21,3 @@ services:
 networks:
   morpheus-network:
     driver: bridge
-
-volumes:
-  morpheus-logs:
-    driver: local
